cmake_minimum_required(VERSION 3.27)
project(PROJEKT1)

set(CMAKE_CXX_STANDARD 17)

add_executable(PROJEKT1 main.cpp
        stack.cpp
        stack.h
        packet.cpp
        packet.h
        sender.cpp
        sender.h
        receiver.cpp
        receiver.h
        receiver.h
        packet.cpp
        sender.h)
